# XKeyCaster

./: CMakeLists.txt  Preferences.hpp  PreferencesDialog.cpp  PreferencesDialog.hpp  PreferencesDialog.ui  XKeyCaster.cpp  XKeyCaster.hpp  main.cpp  readme.md
