CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(XKeyCaster VERSION 0.1.0 LANGUAGES CXX)

IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "Release" CACHE STRING
      "Choose the type of build, options are: Debug Release"
      FORCE)
ENDIF(NOT CMAKE_BUILD_TYPE)
MESSAGE(STATUS "Build type: ${CMAKE_BUILD_TYPE}")

FIND_PACKAGE(Qt5Widgets REQUIRED)
FIND_PACKAGE(Qt5Core REQUIRED)
FIND_PACKAGE(Qt5Gui REQUIRED)
FIND_PACKAGE(Qt5X11Extras REQUIRED)
FIND_PACKAGE(X11 REQUIRED)
MESSAGE(STATUS "Qt5: ${Qt5Widgets_VERSION_STRING}")

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_AUTOUIC ON)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_FLAGS "-fPIC -Wall")
SET(CMAKE_CXX_FLAGS_DEBUG "-g -pg")
SET(CMAKE_CXX_FLAGS_RELEASE "-DNDEBUG -O3")

ADD_EXECUTABLE(xkeycaster main.cpp PreferencesDialog.cpp XKeyCaster.cpp)

INCLUDE_DIRECTORIES(
  ${Qt5Widgets_INCLUDE_DIRS}
  ${Qt5Core_INCLUDE_DIRS}
  ${Qt5Gui_INCLUDE_DIRS}
  ${Qt5X11Extras_INCLUDE_DIRS}
  ${X11_INCLUDE_DIR}
  )
TARGET_LINK_LIBRARIES(
  xkeycaster
  ${Qt5Widgets_LIBRARIES}
  ${Qt5Core_LIBRARIES}
  ${Qt5Gui_LIBRARIES}
  ${Qt5X11Extras_LIBRARIES}
  ${X11_LIBRARIES}
  )

INSTALL(TARGETS xkeycaster DESTINATION bin)
